<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2021 Green Mushroom
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/module">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/applist_fragment"
                    android:icon="@drawable/ic_outline_apps_24"
                    android:title="@string/app_management" />
                <item
                    android:id="@+id/usage_record_fragment"
                    android:icon="@drawable/ic_outline_history_24"
                    android:title="@string/usage_record" />
                <item
                    android:id="@+id/settings_fragment"
                    android:icon="@drawable/ic_outline_settings_24"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/about_fragment"
            android:icon="@drawable/ic_outline_info_24"
            android:title="@string/about" />
    </group>
</menu>
